--- a/hobbies.html
+++ b/hobbies.html
@@ -7,7 +7,7 @@
   <h3>My Hobbies</h3>
   <ol>
     <li>Dancing</li>
-    <li>Hicking</li>
+    <li>Hiking</li>
     <li>Going to the beach</li>
   </ol>
 </head>
